@@ -1,0 +1,5 @@
+//@ runDefault
+
+function foo() {}
+foo.hasOwnProperty();
+foo.hasOwnProperty();
